--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +17,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "swiper": "^11.1.1",
+    "validator": "^13.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
